# cpf-reporter

./: .env.defaults  .gitattributes  .gitignore  .pre-commit-config.yaml  .yarnrc.yml  CONTRIBUTING.md  Dockerfile  README.md  build-lambdas.sh  cors-config.json  docker-compose.dev.yml  localTestLambda.js  localTestStepFunctionDefinition.json  nomerge.txt  package-lock.json  package.json  redwood.toml  service.datadog.yaml
.github/: CODEOWNERS  dependabot.yml  dependency-review-config.yml  release-drafter.yml
.redwood/: schema.graphql  telemetry.txt
__mocks__/: passage-user.ts
api/: jest.config.js  package.json  setup-jest.ts  tsconfig.json
docs/: README.md  local-aws-testing.md  python-schema.md  redwood-introduction.md  (+2 more)
python/: build-lambda.bash  build-python-lambda.sh  pyproject.toml  requirements.txt  test-create-archive.sh
python/src/functions/: create_archive.py  generate_presigned_url_and_send_email.py  generate_treasury_report.py  generate_treasury_report_1C.py  handler.py  send_failure_email.py  subrecipient_treasury_report_gen.py  test_lambdas.py  validate_workbook.py
python/src/lib/: constants.py  email.py  logging.py  output_template_comparator.py  s3_helper.py  s3_object_downloader.py  treasury_email_common.py  treasury_generation_common.py  workbook_utils.py  workbook_validator.py
python/src/schemas/: custom_types.py  project_types.py  schema_V2024_04_01.py  schema_V2024_05_24.py  schema_versions.py
python/src/schemas/latest/: schema.py
python/tests/: conftest.py  test-create-archive.sh  test_create_archive.bats  test_utils.py
python/tests/data/: sample_old_version.xlsm  sample_template.xlsx  sample_template_2.xlsx  sample_valid.xlsm  sample_valid_V2024_05_24.xlsm  subrecipient_treasury_template_empty.xlsx  treasury_success_email.html
python/tests/data/treasury/: sample_1A_input_pass.xlsm  sample_1B_input_pass.xlsm  sample_1B_output.xlsx  sample_1C_input_pass.xlsm  sample_1C_output.xlsx  ~$sample_1C_input_pass.xlsm
python/tests/src/functions/: test_generate_presigned_url_and_send_email.py  test_send_failure_email.py
python/tests/src/lib/: test_create_archive.py  test_output_template_comparator.py  test_subrecipient_treasury_report_gen.py  test_treasury_report.py  test_treasury_report_1A.py  test_treasury_report_1B.py  test_treasury_report_1C.py  test_workbook_validator.py
(+430 files in other folders)
