[tool.poetry]
name = "cpf-reporter"
version = "0.1.0"
description = ""
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.2"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ipython = "^8.22.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
