[tool.poetry]
name = "cpf-reporter"
version = "0.1.0"
description = ""
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.2"
pydantic = "^2.10.5"
aws-lambda-typing = "^2.19.0"
boto3 = "^1.35.96"
structlog = "^24.1.0"
chevron="^0.14.0"
boto3-stubs = {extras = ["essential"], version = "^1.35.98"}

[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.9.0"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 88 (per black recoomendation).
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term --cov-report html"

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

ignore_errors = true
